# rhd2000interface

./: .appveyor.yml  CMakeLists.txt  README.md  config.h.in
Opal Kelly library files/: .gitignore
contrib/ci/: Dockerfile  cibuild.sh
contrib/debian/: changelog  control  copyright
data/: CMakeLists.txt  rhd2000interface.desktop
source/: CMakeLists.txt  RHD2000interface.pro  mainwindow.cpp  rhd2000evalboard.cpp
